# protoc-gen-grpc-node

./: .editorconfig  BUILD.bazel  WORKSPACE  defs.bzl
example/: BUILD.bazel  WORKSPACE  echo.proto
src/: grpc-node-generator-options.cc  grpc-node-generator-options.hh  grpc-node-generator-utils.cc  grpc-node-generator-utils.hh  grpc-node-generator.cc  grpc-node-generator.hh  main.cc
